--- a/index.html
+++ b/index.html
@@ -9,10 +9,12 @@
     <meta http-equiv="Pragma" content="no-cache" />
     <meta http-equiv="Expires" content="0" />
     <link rel="icon" type="image/png" href="favicon.png">
-    <!-- 
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous" referrerpolicy="no-referrer">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous"
+        referrerpolicy="no-referrer">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"
+        referrerpolicy="no-referrer"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.3.2/chart.min.js"
         integrity="sha512-VCHVc5miKoln972iJPvkQrUYYq7XpxXzvqNfiul1H4aZDwGBGC0lq373KNleaB2LpnC2a/iNfE5zoRYmB4TRDQ=="
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
@@ -20,9 +22,28 @@
     <script src="js/commons.js"></script>
 </head>
 
-<body onload="renderTestResults(8)">
-    <div>
-        <canvas id="renderingTestResultsZone"></canvas>
+<body onload="renderInit()">
+    <div class="container-lg">
+        <div class="mb-3">
+            <select class="form-select" aria-label="Default select example" id="selectLab"
+                onchange="renderTestResults()">
+                <option value="-1" selected>Choose a lab</option>
+                <option value="1">Pseudo-Random Number Generation (PRNG)</option>
+                <option value="2">Hashing (SHA-512)</option>
+                <option value="3">Encryption with symmetric key (AES-GCM)</option>
+                <option value="5">Encryption with asymmetric key (RSA-OAEP)</option>
+                <option value="4">Signature operation with secret (HMAC)</option>
+                <option value="7">Signature operation with asymmetric key pair (ECDSA)</option>
+                <option value="8">Key derivation based on a password (PBKDF2)</option>
+            </select>
+        </div>
+        <div class="d-flex align-items-center" id="divLoading">
+            <strong>Processing pending...</strong>
+            <div class="spinner-border ms-auto" role="status" aria-hidden="false"></div>
+        </div>
+        <div class="mb-3" id="divChart">
+            <canvas id="renderingTestResultsZone"></canvas>
+        </div>
     </div>
 </body>
 
